vue购物车链接地址修改为：http://js.jirengu.com/wiqih

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a href="http://js.jirengu.com/dusax">封装组件(轮播)</a></li>
             <li><a href="http://js.jirengu.com/humes">封装组件(曝光懒加载)</a></li>
             <li><a href="http://js.jirengu.com/sezuk/1">封装组件(tab切换)</a></li>
-            <li><a href="https://jsbin.com/xerisiz/edit?output">vue购物车</a></li>
+            <li><a href="http://js.jirengu.com/wiqih">vue购物车</a></li>
         </ol>
     </div>
 </body>
